Updates from Overleaf

--- a/thesis/paper/bibliography.bib
+++ b/thesis/paper/bibliography.bib
@@ -1,281 +1,149 @@
-// author: make sure to escape special characters in name
-// title: user double brackets and manual capitalisation of tile
-// booktile: always use the full year in the short name (e.g. CHI 2015 instead of CHI '15)
-// pages: use a double dash between page numbers
-// address: do not mention state (for locations in the US)
-
-
-@Online{StateOfJs2020,
-  author   = {{Sacha Greif, Raphaël Benitte}},
-  title    = {State of JS},
-  year     = {2020},
-  url      = {https://2020.stateofjs.com}
-}
-
-@Online{EricssonMobility2020,
-  author   = {Ericsson},
-  title    = {Ericsson Mobility Report},
-  year     = {2021},
-  url      = {https://www.ericsson.com/49220c/assets/local/mobility-report/documents/2020/emr-q4-2020-update.pdf}
-}
-
-@inproceedings{TrackingWeb,
-  title={Host Fingerprinting and Tracking on the Web: Privacy and Security Implications.},
-  author={Yen, Ting-Fang and Xie, Yinglian and Yu, Fang and Yu, Roger Peng and Abadi, Martin},
-  booktitle={NDSS},
-  volume={62},
-  pages={66},
-  year={2012}
-}
-
-@article{TrackingFavicon,
-  title={Persistent Tracking in Modern Browsers},
-  author={Solomos, Konstantinos and Kristoff, John and Kanich, Chris and Polakis, Jason}
-}
-
-@inproceedings{TheoreticalUIDLs,
-  title={A theoretical survey of user interface description languages: Preliminary results},
+@inproceedings{UIDLTheoreticalSurvey,
   author={Guerrero-Garcia, Josefina and Gonzalez-Calleros, Juan Manuel and Vanderdonckt, Jean and Munoz-Arteaga, Jaime},
-  booktitle={2009 Latin American Web Congress},
+  title={{A Theoretical Survey of User Interface Description Languages: Preliminary Results}},
+  booktitle={{2009 Latin American Web Congress}},
   pages={36--43},
   year={2009},
-  organization={IEEE}
+  organization={IEEE},
+  doi={10.1109/LA-WEB.2009.40}
 }
 
 @article{DSRM,
-  title={A design science research methodology for information systems research},
   author={Peffers, Ken and Tuunanen, Tuure and Rothenberger, Marcus A and Chatterjee, Samir},
-  journal={Journal of management information systems},
+  title={{A Design Science Research Methodology for Information Systems Research}},
+  journal={Journal of Management Information Systems},
   volume={24},
   number={3},
   pages={45--77},
   year={2007},
-  publisher={Taylor \& Francis}
-}
-
-@inproceedings{UIDLTheoreticalSurvey,
-  title={A theoretical survey of user interface description languages: Preliminary results},
-  author={Guerrero-Garcia, Josefina and Gonzalez-Calleros, Juan Manuel and Vanderdonckt, Jean and Munoz-Arteaga, Jaime},
-  booktitle={2009 Latin American Web Congress},
-  pages={36--43},
-  year={2009},
-  organization={IEEE}
+  publisher={Taylor \& Francis},
+  doi={10.2753/MIS0742-1222240302}
 }
 
 @inproceedings{XMLCompliantUIDLs,
-  title={A review of XML-compliant user interface description languages},
   author={Souchon, Nathalie and Vanderdonckt, Jean},
-  booktitle={International Workshop on Design, Specification, and Verification of Interactive Systems},
+  title={{A Review of XML-Compliant User Interface Description Languages}},
+  booktitle={{International Workshop on Design, Specification, and Verification of Interactive Systems}},
   pages={377--391},
   year={2003},
-  organization={Springer}
+  organization={Springer},
+  doi={10.1007/978-3-540-39929-2_26}
 }
 
 @article{UIML,
-  title={UIML: an appliance-independent XML user interface language},
   author={Abrams, Marc and Phanouriou, Constantinos and Batongbacal, Alan L and Williams, Stephen M and Shuster, Jonathan E},
-  journal={Computer networks},
+  title={{UIML: An Appliance-Independent XML User Interface Language}},
+  journal={{Computer Networks}},
   volume={31},
   number={11-16},
   pages={1695--1708},
   year={1999},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/S1389-1286(99)00044-4}
 }
 
 @inproceedings{XIML,
-  title={XIML: a common representation for interaction data},
   author={Puerta, Angel and Eisenstein, Jacob},
-  booktitle={Proceedings of the 7th international conference on Intelligent user interfaces},
+  title={{XIML: A Common Representation for Interaction Data}},
+  booktitle={{Proceedings of the 7th International Conference on Intelligent User Interfaces}},
   pages={214--215},
-  year={2002}
+  year={2002},
+  doi={10.1145/502716.502763}
 }
 
 @article{TeresaXML,
-  title={A unified method for designing interactive systems adaptable to mobile and stationary platforms},
   author={Patern{\`o}, Fabio and Santoro, Carmen},
-  journal={Interacting with Computers},
+  title={{A Unified Method for Designing Interactive Systems Adaptable to Mobile and Stationary Platforms}},
+  journal={{Interacting with Computers}},
   volume={15},
   number={3},
   pages={349--366},
   year={2003},
-  publisher={Oxford University Press Oxford, UK}
+  publisher={Oxford University Press Oxford, UK},
+  doi={10.1016/S0953-5438(03)00013-4}
 }
 
 @article{MariaXML,
-  title={MARIA: A universal, declarative, multiple abstraction-level language for service-oriented applications in ubiquitous environments},
-  author={Paterno', Fabio and Santoro, Carmen and Spano, Lucio Davide},
-  journal={ACM Transactions on Computer-Human Interaction (TOCHI)},
+  author={Patern{\`o}, Fabio and Santoro, Carmen and Spano, Lucio Davide},
+  title={{MARIA: A Universal, Declarative, Multiple Abstraction-Level Language for Service-Oriented Applications in Ubiquitous Environments}},
+  journal={{ACM Transactions on Computer-Human Interaction (TOCHI)}},
   volume={16},
   number={4},
   pages={1--30},
   year={2009},
-  publisher={ACM New York, NY, USA}
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/1614390.1614394}
 }
 
 @inproceedings{UsiXML,
-  title={USIXML: A language supporting multi-path development of user interfaces},
   author={Limbourg, Quentin and Vanderdonckt, Jean and Michotte, Benjamin and Bouillon, Laurent and L{\'o}pez-Jaquero, V{\'\i}ctor},
-  booktitle={IFIP International Conference on Engineering for Human-Computer Interaction},
+  title={{USIXML: A Language Supporting Multi-Path Development of User Interfaces}},
+  booktitle={{IFIP International Conference on Engineering for Human-Computer Interaction}},
   pages={200--220},
   year={2004},
-  organization={Springer}
+  organization={Springer},
+  doi={10.1007/11431879_12}
 }
 
 @article{IntrusiveAds,
-  title={The economics of advertising and privacy},
   author={Tucker, Catherine E},
-  journal={International journal of Industrial organization},
+  title={{The Economics of Advertising and Privacy}},
+  journal={{International journal of Industrial organization}},
   volume={30},
   number={3},
   pages={326--329},
   year={2012},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.ijindorg.2011.11.004}
 }
 
 @inproceedings{WebNotForAll,
-  title={Web not for all: a large scale study of web accessibility},
   author={Lopes, Rui and Gomes, Daniel and Carri{\c{c}}o, Lu{\'\i}s},
-  booktitle={Proceedings of the 2010 International Cross Disciplinary Conference on Web Accessibility (W4A)},
+  title={{Web Not For All: A Large Scale Study of Web Accessibility}},
+  booktitle={{Proceedings of the 2010 International Cross Disciplinary Conference on Web Accessibility (W4A)}},
   pages={1--4},
-  year={2010}
+  year={2010},
+  doi={10.1145/1805986.1806001}
 }
 
-@article{PWAs,
-  title={Progressive web apps: the definite approach to Cross-Platform development?},
+@inproceedings{PWAs,
   author={Majchrzak, Tim A and Bi{\o}rn-Hansen, Andreas and Gr{\o}nli, Tor-Morten},
-  year={2018}
+  title={{Progressive Web Apps: The Definite Approach to Cross-Platform Development?}},
+  booktitle={{In Proceedings of the 4th International Conference on Mobile Software Engineering and Systems (MOBILESoft’17)}},
+  year={2018},
+  pages={35--45},
+  address={IEEE Press, Piscataway, USA},
+  doi={10.24251/HICSS.2018.718}
 }
 
-@misc{DarkMode,
-  title={The Rise of Dark Mode: A qualitative study of an emerging user interface design trend},
+@phdthesis{DarkMode,
+  type={Dissertation},
   author={Eisfeld, Henriette and Kristallovich, Felix},
-  year={2020}
-}
-
-@online{FacebookYoga,
-  title = {Yoga Layout Engine},
-  url = {https://yogalayout.com/},
-}
-
-@online{FlexSpec1,
-  title = {CSS Flexible Box Layout Module Level 1},
-  url = {https://www.w3.org/TR/css-flexbox-1/},
-}
-
-@online{FlexSpec2,
-  title = {MDN Basic concepts of flexbox},
-  url = {https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox},
+  title={{The Rise of Dark Mode: A Qualitative Study of an Emerging User Interface Design Trend}},
+  year={2020},
+  URL={http://urn.kb.se/resolve?urn=urn:nbn:se:hj:diva-50563}
 }
 
 @article{seescoa,
-  title={Runtime transformations for modal independent user interface migration},
   author={Luyten, Kris and Van Laerhoven, Tom and Coninx, Karin and Van Reeth, Frank},
-  journal={Interacting with Computers},
+  title={{Runtime Transformations for Modal Independent User Interface Migration}},
+  journal={{Interacting With Computers}},
   volume={15},
   number={3},
   pages={329--347},
   year={2003},
-  publisher={Oxford University Press Oxford, UK}
+  publisher={Oxford University Press Oxford, UK},
+  doi={10.1016/S0953-5438(03)00012-2}
 }
 
 @article{openuidl,
-  title={OpenUIDL, A User Interface Description Language for Runtime Omni-Channel User Interfaces},
   author={Moldovan, Alex and Nicula, Vlad and Pasca, Ionut and Popa, Mihai and Namburu, Jaya Krishna and Oros, Anamaria and Brie, Paul},
+  title={{OpenUIDL, A User Interface Description Language for Runtime Omni-Channel User Interfaces}},
   journal={Proceedings of the ACM on Human-Computer Interaction},
   volume={4},
   number={EICS},
   pages={1--52},
   year={2020},
-  publisher={ACM New York, NY, USA}
-}
-
-@Online{ReactNative,
-  author   = {Facebook},
-  title    = {React Native},
-  year     = {2021},
-  url      = {https://reactnative.dev}
-}
-
-@Online{Flutter,
-  author   = {Google},
-  title    = {Flutter},
-  year     = {2021},
-  url      = {https://flutter.dev}
-}
-
-@Online{SquareSpace,
-  author   = {SquareSpace},
-  title    = {SquareSpace},
-  year     = {2021},
-  url      = {https://www.squarespace.com}
-}
-
-@Online{Wix,
-  author   = {Wix},
-  title    = {Wix},
-  year     = {2021},
-  url      = {https://www.wix.com}
-}
-
-@Online{Wordpress,
-  author   = {Wordpress},
-  title    = {Wordpress},
-  year     = {2021},
-  url      = {https://www.wordpress.com}
-}
-
-@Online{Drupal,
-  author   = {Drupal},
-  title    = {Drupal},
-  year     = {2021},
-  url      = {https://www.drupal.org}
-}
-
-@Online{Joomla,
-  author   = {Joomla},
-  title    = {Joomla},
-  year     = {2021},
-  url      = {https://www.joomla.org}
-}
-
-@Online{Contentful,
-  author   = {Contentful},
-  title    = {Contentful},
-  year     = {2021},
-  url      = {https://www.contentful.org}
-}
-
-@Online{Strapi,
-  author   = {Strapi},
-  title    = {Strapi},
-  year     = {2021},
-  url      = {https://www.strapi.io}
-}
-
-@Online{Gatsby,
-  author   = {Gatsby},
-  title    = {Gatsby},
-  year     = {2021},
-  url      = {https://www.gatsbyjs.com}
-}
-
-@Online{Nextjs,
-  author   = {Next.js},
-  title    = {Next.js},
-  year     = {2021},
-  url      = {https://www.nextjs.org}
-}
-
-@Online{Jekyll,
-  author   = {Jekyll},
-  title    = {Jekyll},
-  year     = {2021},
-  url      = {https://jekyllrb.com}
-}
-
-@Online{Retool,
-  author   = {Retool},
-  title    = {Retool},
-  year     = {2021},
-  url      = {https://retool.com}
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/3397874}
 }
