--- a/thesis/paper/sections/2_relatedWork.tex
+++ b/thesis/paper/sections/2_relatedWork.tex
@@ -52,7 +52,7 @@ Nonetheless, if we were to take a step back to look at the big picture, Intertex
 
 The issue of cross-platform development has long been an active research topic, especially after the rise of popularity in mobile devices, tablets and wearable technologies. There have been a number of solutions that aim to solve this issue, and the traditional approach is hybrid application development. The idea of hybrid application development is to have a single codebase that can either run on multiple devices, or compile into an application that can natively run on multiple devices. Around this concept there have been many tools and libraries, and they have been gaining traction in the recent days.
 
-One of the most notable example to these libraries is React Native. React Native is a mobile application framework that works under React, and generates UI elements native to the platform that the code is being compiled against. Once an application is built with React Native, it can be compiled as a native iOS or an Android application \cite{ReactNative}. Another framework recently gaining traction is Flutter by Google, it takes the hybrid application development to the next level by supporting web, mobile environments and popular desktop environments \cite{Flutter}.
+One of the most notable example to these libraries is React Native. React Native is a mobile application framework that works under React, and generates UI elements native to the platform that the code is being compiled against. Once an application is built with React Native, it can be compiled as a native iOS or an Android application \footnote{\url{https://reactnative.dev}}. Another framework recently gaining traction is Flutter by Google, it takes the hybrid application development to the next level by supporting web, mobile environments and popular desktop environments \footnote{\url{https://flutter.dev}}.
 
 
 \section{Tools and Services} \label{relatedTools}
@@ -61,16 +61,16 @@ Over the past couple of years, there has been a significant shift towards no-cod
 
 \subsection{Website Builders}
 
-First of all, there are services such as Wix \cite{Wix} or SquareSpace \cite{SquareSpace} that allow you to design and publish a website via a drag and drop interface. They offer services on the web environment. While they mostly focus on the design aspects of website development, they offer pre-made customisable backends for specific use cases such as blogs and e-commerce websites.
+First of all, there are services such as Wix \footnote{\url{https://www.wix.com}} or SquareSpace \footnote{\url{https://www.squarespace.com}} that allow you to design and publish a website via a drag and drop interface. They offer services on the web environment. While they mostly focus on the design aspects of website development, they offer pre-made customisable backends for specific use cases such as blogs and e-commerce websites.
 
 \subsection{Content Management Systems}
 
-Then there are Content Management Systems (CMS) like Wordpress \cite{Wordpress}, Drupal \cite{Drupal} and Joomla \cite{Joomla}. These services are not new and have been around for some time. They offer services only for the web platform. It is possible to create front-end applications using these services, but in order to go beyond a pre-made theme, they often require minimal front-end development knowledge. Moreover, they allow users to create their own data structures and provide the user interface to manipulate data. There are also Headless CMS services such as Contentful \cite{Contentful} and Strapi \cite{Strapi} that allow users to create and manage their data, but do not provide a front-end and allow the data to be consumed through an API from any front-end application.
+Then there are Content Management Systems (CMS) like Wordpress \footnote{\url{https://www.wordpress.com}}, Drupal \footnote{\url{https://www.drupal.org}} and Joomla \footnote{\url{https://www.joomla.org}}. These services are not new and have been around for some time. They offer services only for the web platform. It is possible to create front-end applications using these services, but in order to go beyond a pre-made theme, they often require minimal front-end development knowledge. Moreover, they allow users to create their own data structures and provide the user interface to manipulate data. There are also Headless CMS services such as Contentful \footnote{\url{https://www.contentful.org}} and Strapi \footnote{\url{https://www.strapi.io}} that allow users to create and manage their data, but do not provide a front-end and allow the data to be consumed through an API from any front-end application.
 
 \subsection{Static Site Generators}
 
-Static site generation is a process of taking an input from the user and generating static web content ready to be served by a web server. This input is typically JavaScript code as many static site generators such as Gatsby \cite{Gatsby} and Next.js \cite{Nextjs} are based on JavaScript frameworks and require programming knowledge, but there are ones such as Jekyll \cite{Jekyll} that uses the markdown syntax, and renders within a given theme.
+Static site generation is a process of taking an input from the user and generating static web content ready to be served by a web server. This input is typically JavaScript code as many static site generators such as Gatsby \footnote{\url{https://www.gatsbyjs.com}} and Next.js \footnote{\url{https://www.nextjs.org}} are based on JavaScript frameworks and require programming knowledge, but there are ones such as Jekyll \footnote{\url{https://jekyllrb.com}} that uses the markdown syntax, and renders within a given theme.
 
 \subsection{Internal Tool Builders}
 
-These services are mostly intended for developers to use. They aim to help developers rapidly produce better and durable tools that are not user-facing and are to be used internally within a company. They provide GUI components, and integration options to number of services as well as direct databases. The intended use for these tools is to pull data from a number of data sources, process it and display it using the provided GUI components. Retool \cite{Retool} is a popular example that only targets the web platform, but there are also some similar tools in this category that also produces native-like experiences.
+These services are mostly intended for developers to use. They aim to help developers rapidly produce better and durable tools that are not user-facing and are to be used internally within a company. They provide GUI components, and integration options to number of services as well as direct databases. The intended use for these tools is to pull data from a number of data sources, process it and display it using the provided GUI components. Retool \footnote{\url{https://retool.com}} is a popular example that only targets the web platform, but there are also some similar tools in this category that also produces native-like experiences.
