--- a/thesis/paper/sections/4_implementation.tex
+++ b/thesis/paper/sections/4_implementation.tex
@@ -22,7 +22,7 @@ The obvious solution to this problem was using web technologies, as responsive d
 
 \subsection{Layout System}
 
-The IUIDL offers a powerful layout system based on the CSS flexbox specification. It allows developers to build responsive layouts and position UI elements with ease. Intertext web client makes use of the browser implementation of CSS flexbox specification, whereas for other non-browser based clients, Facebook's open source library Yoga \cite{FacebookYoga} will be used. Yoga is a layout engine that implements css flexbox specification in C++, therefore it can be used on any ecosystem that can execute C++ to calculate the positioning of the UI elements.
+The IUIDL offers a powerful layout system based on the CSS flexbox specification. It allows developers to build responsive layouts and position UI elements with ease. Intertext web client makes use of the browser implementation of CSS flexbox specification, whereas for other non-browser based clients, Facebook's open source library Yoga \footnote{\url{https://yogalayout.com}} will be used. Yoga is a layout engine that implements css flexbox specification in C++, therefore it can be used on any ecosystem that can execute C++ to calculate the positioning of the UI elements.
 
 \begin{figure}[H]
   \centering
@@ -62,7 +62,7 @@ As a solution, we offer three different types of units; percentages, spaces and 
 \label{fig:layout_props_example}%
 \end{figure}
 
-IUIDL defines some properties that can be used to leverage the layout system to determine the size, spacing and positioning of UI elements. Figure~\ref{fig:layout_props_example} shows an example of how layout properties can be used to center a text in a block. For positioning, \texttt{position} prop can be used, which takes \texttt{relative} or \texttt{absolute}. The default is \texttt{relative}. For spacing, supported values are \texttt{top}, \texttt{bottom}, \texttt{left}, \texttt{right}, \texttt{margin}, \texttt{marginTop}, \texttt{marginBottom}, \texttt{marginLeft}, \texttt{marginRight}, \texttt{padding}, \texttt{paddingTop}, \texttt{paddingBottom}, \texttt{paddingLeft} and \newline \texttt{paddingRight}. As for sizing, accepted values are \texttt{width}, \texttt{minWidth}, \texttt{maxWidth}, \texttt{height}, \texttt{minHeight} and \texttt{maxHeight}. All these values can take all supported unit types. To leverage the flexbox properties, the accepted properties are \texttt{alignContent}, \texttt{alignItems}, \texttt{alignSelf}, \texttt{flexDirection}, \texttt{flexWrap}, \texttt{flexGrow}, \texttt{flexShrink}, \texttt{flexBasis} and \texttt{justifyContent}. Flexbox properties follow the flexbox specification \cite{FlexSpec1} \cite{FlexSpec2}. All layout properties mentioned above are accepted by and can be used with every Intertext component.
+IUIDL defines some properties that can be used to leverage the layout system to determine the size, spacing and positioning of UI elements. Figure~\ref{fig:layout_props_example} shows an example of how layout properties can be used to center a text in a block. For positioning, \texttt{position} prop can be used, which takes \texttt{relative} or \texttt{absolute}. The default is \texttt{relative}. For spacing, supported values are \texttt{top}, \texttt{bottom}, \texttt{left}, \texttt{right}, \texttt{margin}, \texttt{marginTop}, \texttt{marginBottom}, \texttt{marginLeft}, \texttt{marginRight}, \texttt{padding}, \texttt{paddingTop}, \texttt{paddingBottom}, \texttt{paddingLeft} and \newline \texttt{paddingRight}. As for sizing, accepted values are \texttt{width}, \texttt{minWidth}, \texttt{maxWidth}, \texttt{height}, \texttt{minHeight} and \texttt{maxHeight}. All these values can take all supported unit types. To leverage the flexbox properties, the accepted properties are \texttt{alignContent}, \texttt{alignItems}, \texttt{alignSelf}, \texttt{flexDirection}, \texttt{flexWrap}, \texttt{flexGrow}, \texttt{flexShrink}, \texttt{flexBasis} and \texttt{justifyContent}. Flexbox properties follow the flexbox specification \footnote{CSS Flexible Box Layout Module Level 1: \url{https://www.w3.org/TR/css-flexbox-1}}. All layout properties mentioned above are accepted by and can be used with every Intertext component.
 
 \section{Components}
 
