--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -73,7 +73,7 @@
 \input{sections/7_appendix}
 
 % Bibliography
-\bibliographystyle{plain}
+\bibliographystyle{plainurl}
 \bibliography{bibliography} % uses the file bibliography.bib !
  % -------------------------------------------------
 
