Updates from Overleaf

--- a/thesis/paper/sections/7_appendix.tex
+++ b/thesis/paper/sections/7_appendix.tex
@@ -1,12 +1,16 @@
 \chapter{Appendix} \label{App:AppendixA}
 \addtocontents{toc}{\protect\setcounter{tocdepth}{0}}
 
-\section{Source Codes}
+\section{Source Codes and Demos}
 
 \begin{itemize}
     \item Intertext source code: \url{https://github.com/oguzgelal/intertext}
     
     \item RecipeApp demo source code: \url{https://github.com/oguzgelal/intertext-backend-demo}
+    
+    \item Intertext Web Client: Components Demo: \url{https://inx.oguzgelal.com/?u=https\%3A\%2F\%2Fintertext-backend-demo.herokuapp.com\%2Fdemo}
+    
+    \item Intertext Web Client: RecipeApp: \url{https://inx.oguzgelal.com/?u=https\%3A\%2F\%2Fintertext-backend-demo.herokuapp.com\%2Frecipes} (email: oguz@test.com, password: 123123)
 \end{itemize}
 
 \section{State of JS 2020}
