--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper,12pt]{book}
+\usepackage{vub}
 
 %\usepackage{amssymb}
 %\usepackage{pdfpages}
@@ -14,22 +15,23 @@
 \usepackage{template/cisa}
 \usepackage{tcolorbox}
 \usepackage{xurl}
-\usepackage{pgf-pie} 
+\usepackage{pgf-pie}
 \usepackage{CJKutf8}
 \usepackage{hyphenat}
+%\usepackage{pgfplots}
 
 \input{thesis/paper/utils/json-lang}
 \input{thesis/paper/utils/xml-lang}
 \input{thesis/paper/utils/javascript-lang}
 
-\author{Oguz Gelal}
-\level{ma2}
+
 \title{Intertext}
 \subtitle{Towards a Secure and Platform Agnostic Front-end Ecosystem}
-\promotor{Prof. Dr. Beat Signer}                                                         
-\advisors{Prof. Dr. Beat Signer}
-\academicyear{2020}{2021}
-\dutchspeaking{false}
+\author{Oguz Gelal}
+\faculty{Science and Bio-Engineering Sciences}
+\promotors{Promotor(s):~Prof. Dr. Beat Signer}
+\pretitle{Master thesis submitted in partial fulfilment of the requirements for the degree of Master of Science in Applied Sciences and Engineering: Computer Science}
+\date{2020 - 2021}
           
 \begin{document}
 
@@ -38,7 +40,7 @@
 % ---------------- THESIS CONTENT ----------------
 
 % Title Pages
-\makethetitle
+\maketitle
 
 \setcounter{page}{1}
  \pagenumbering{roman}
